After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760972 - glwindow: Fix android build
glwindow: Fix android build
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-22 07:54 UTC by Holger Kaelberer
Modified: 2016-01-22 08:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glwindow: Fix android build (857 bytes, patch)
2016-01-22 07:54 UTC, Holger Kaelberer
committed Details | Review

Description Holger Kaelberer 2016-01-22 07:54:15 UTC
Created attachment 319540 [details] [review]
glwindow: Fix android build

gstglwindow_android_egl.c: In function 'draw_cb':
gstglwindow_android_egl.c:112:9: error: pointer targets in passing argument 2 of 'gst_gl_window_get_surface_dimensions' differ in signedness [-Werror=pointer-sign]
         &window_height);
         ^
In file included from ../../../../gst-libs/gst/gl/gl.h:38:0,
                 from ../../../../gst-libs/gst/gl/egl/gstglcontext_egl.h:25,
                 from gstglwindow_android_egl.c:33:
../../../../gst-libs/gst/gl/gstglwindow.h:205:10: note: expected 'guint *' but argument is of type 'gint *'
 void     gst_gl_window_get_surface_dimensions (GstGLWindow * window,
          ^
gstglwindow_android_egl.c:112:9: error: pointer targets in passing argument 3 of 'gst_gl_window_get_surface_dimensions' differ in signedness [-Werror=pointer-sign]
         &window_height);
         ^
In file included from ../../../../gst-libs/gst/gl/gl.h:38:0,
                 from ../../../../gst-libs/gst/gl/egl/gstglcontext_egl.h:25,
                 from gstglwindow_android_egl.c:33:
../../../../gst-libs/gst/gl/gstglwindow.h:205:10: note: expected 'guint *' but argument is of type 'gint *'
 void     gst_gl_window_get_surface_dimensions (GstGLWindow * window,
          ^
cc1: all warnings being treated as errors
Makefile:886: recipe for target 'libgstgl_android_la-gstglwindow_android_egl.lo' failed
make[1]: *** [libgstgl_android_la-gstglwindow_android_egl.lo] Error 1
make[1]: Leaving directory '/mnt/ltmp/cerbero/sources/android_armv7/gst-plugins-bad-1.0-static-1.7/gst-libs/gst/gl/android'
Makefile:1395: recipe for target 'all-recursive' failed
make: *** [all-recursive] Error 1
Comment 1 Sebastian Dröge (slomo) 2016-01-22 08:00:51 UTC
Attachment 319540 [details] pushed as a2376d0 - glwindow: Fix android build