glwindow: Fix android build

https://bugzilla.gnome.org/show_bug.cgi?id=760972